<resources>
    <string name="app_name">Toll Roads</string>
    <string name="toll_calculator">Toll Estimator</string>
    <string name="capital_guests">GUESTS</string>
    <string name="capital_pay_toll_now">PAY TOLL NOW</string>
    <string name="capital_toll_accounts">TOLL ACCOUNTS</string>
    <string name="capital_log_in">LOG IN</string>
    <string name="capital_sign_up">SIGN UP</string>
    <string name="capital_menu">MENU</string>
    <string name="compare_accounts">Compare Accounts</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="privacy">Privacy</string>
    <string name="term_of_use">Terms of Use</string>
    <string name="our_call_center_number">Our Call Center number:</string>
    <string name="do_you_like_this_app">Do you like this app?</string>
    <string name="i_like_this_app">I like this app</string>
    <string name="there_is_a_problem">There is a problem</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="capital_user_name">Username</string>
    <string name="user_name">username</string>
    <string name="capital_password">Password</string>
    <string name="min_5_characters">min 5 characters</string>
    <string name="forgot_user_name_password"><u>Forgot Username/Password?</u></string>
    <string name="log_in">Log In</string>
    <string name="cancel">Cancel</string>
    <string name="email_empty_warning">Email is required.</string>
    <string name="email_invalid_warning">Email is not valid</string>
    <string name="password_empty_warning">Password is required.</string>
    <string name="password_too_short_warning">Password must be at least 5 characters long</string>
    <string name="network_error_retry">Oops, something went wrong. Please check your internet connection.</string>
    <string name="ok">OK</string>
    <string name="message_invalid_token_and_logout_message">Session has expired</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="STRING_INVALID_TOKEN">invalid tokenID</string>
    <string name="STRING_INVALID_TOKEN_2">invalid tokenID.</string>
    <string name="STRING_INVALID_TOKEN_SPAINISH">ficha de ID inv�lida</string>
    <string name="STRING_EXPIRE_TOKEN">Session has expired</string>
    <string name="STRING_EXPIRE_TOKEN_2">Session has expired.</string>
    <string name="STRING_EXPIRE_TOKEN_SPAINISH">ficha de ID inv�lida</string>
    <string name="road">Road</string>
    <string name="building_type_prompt">Select a road</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="pay_by">Pay By</string>
    <string name="vehicles">Vehicles</string>
    <string name="select_entry_point">Select Entry Point</string>
    <string name="select_exit_point">Select Exit Point</string>
    <string name="my_account">My Account</string>
    <string name="recent_tolls_empty">You have no recent tolls.</string>
    <string name="payments">Payments</string>
    <string name="log_out">Log Out</string>
    <string name="legal">Legal</string>
    <string name="transponders">Transponders</string>
    <string name="log_in_information">Log In Information</string>
    <string name="contact_information">Contact Information</string>
    <string name="recent_tolls">Recent Tolls</string>
    <string name="add_another_vehicle">Add another vehicle</string>
    <string name="make_a_payment">Make a Payment</string>
    <string name="payment_method">Payment Method</string>
    <string name="recent_payments">Recent Payments</string>
    <string name="add_another_payment_method">Add another payment method</string>
    <string name="credit_card">Credit Card</string>
    <string name="electronic_check">Electronic Check</string>
    <string name="request_transponders">Request Transponders</string>
    <string name="request_return">Request Return</string>
    <string name="request_mounting_strips">Request Mounting Strips</string>
    <string name="request_exchange">Request Exchange</string>
    <string name="report_lost_or_stolen">Report Lost/Stolen</string>
    <string name="done">Done</string>
    <string name="request_transponder">Request Transponder</string>
    <string name="request_additional_transponders">Request additional transponders</string>
    <string name="type">Type</string>
    <string name="quantity">Qty</string>
    <string name="windshield">Windshield Transponder</string>
    <string name="external_or_license_plate">External/License Plate</string>
    <string name="save">Save</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="country">Country</string>
    <string name="email">Email</string>
    <string name="primary_no">Primary No.</string>
    <string name="secondary_no">Secondary No.</string>
    <string name="receive_text_alert">I would like to receive text alerts.</string>
    <string name="re_type">Re-type</string>
    <string name="security_question_1">Security Question 1</string>
    <string name="security_question_2">Security Question 2</string>
    <string name="security_question_3">Security Question 3</string>
    <string name="four_numbers">4 numbers</string>
    <string name="phone_access_pin">Phone Access PIN</string>
    <string name="license_plate_no">License Plate</string>
    <string name="confirm_plate_no">Confirm Plate</string>
    <string name="year">Year</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="is_a_rental">Is this a rental/loaner?</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="tap_to_change">Tap to Change</string>
    <string name="new_vehicle">New Vehicle</string>
    <string name="no_space_symbols">no spaces/symbols</string>
    <string name="vehicle_year">vehicle year</string>
    <string name="vehicle_make">vehicle make</string>
    <string name="vehicle_model">vehicle model</string>
    <string name="new_vehicle_hint">Enter information about the new vehicle on your account.</string>
    <string name="make_payment_hint">Select a payment method and enter an amount</string>
    <string name="pay_method">Pay Method</string>
    <string name="cvv">CVV</string>
    <string name="amount">Amount</string>
    <string name="dollar_sign">$</string>
    <string name="pay_now">Pay Now</string>
    <string name="card_no">Card No.</string>
    <string name="name_on_card">Name</string>
    <string name="expiration_date">Expiry</string>
    <string name="mm_yy">MMYY</string>
    <string name="billing_zip_code">Zip code</string>
    <string name="payment_order">Payment Order</string>
    <string name="new_payment_method">New Payment Method</string>
    <string name="new_payment_method_hint">Enter your payment information.</string>
    <string name="card_no_hint">1234567812345678</string>
    <string name="full_name">full name</string>
    <string name="zip_code_hint">zip code</string>
    <string name="replenishment_amount">Replenishment Amount</string>
    <string name="routing_no">Routing No.</string>
    <string name="routing_no_hint">9 digits</string>
    <string name="account_no">Account No.</string>
    <string name="first_name">First Name</string>
    <string name="first_name_hint">john</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_hint">smith</string>
    <string name="step_account_info">Step 1: Account Info</string>
    <string name="sign_up_account_info_hint1">Please select the account type.</string>
    <string name="sign_up_account_info_hint2">Not sure which account is right for you?</string>
    <string name="compare_accounts_with_link"><u>Compare Accounts.</u></string>
    <string name="create_user_name_password">Create a username and password.</string>
    <string name="re_type_email">Re-type Email</string>
    <string name="email_hint">name@example.com</string>
    <string name="receive_email_alert">My Communication Preferences</string>
    <string name="step_contact_info">Step 2: Contact Info</string>
    <string name="sign_up_contact_info_hint">Enter the contact information of the accountholder.</string>
    <string name="address_1_hint">billing address 1</string>
    <string name="address_2_hint">(optional) address 2</string>
    <string name="phone_no_hint">0000000000</string>
    <string name="vehicle_index">Vehicle %1$s</string>
    <string name="step_vehicle_info">Step 3: Vehicle Info</string>
    <string name="step_payment_info">Step 4: Payment Info</string>
    <string name="request_transponders_hint">How many transponders do you need?</string>
    <string name="confirm_account_detail">Confirm the details of your account type.</string>
    <string name="fastrak_account">FasTrak Account</string>
    <string name="express_charge_account">ExpressAccount Charge</string>
    <string name="express_prepaid_account">ExpressAccount Prepaid</string>
    <string name="express_invoice_account">ExpressAccount Invoice</string>
    <string name="express_account_description">A transponder is not issued, and ExpressAccounts are only valid on State Routes 73, 133, 241, or 261.</string>
    <string name="fastrak_account_description">You are required to maintain a prepaid balance and mount a transponder. This account is accepted on all toll facilities in CA.</string>
    <string name="agree">Agree</string>
    <string name="customer_agreement">Customer Agreement</string>
    <string name="one_time_toll">Pay Toll</string>
    <string name="one_time_toll_vehicle_hint">Please enter the license plate number and other information for your vehicle</string>
    <string name="vehicle_class">Vehicle Class</string>
    <string name="trailer_information">Trailer Information(optional)</string>
    <string name="plate_no">Plate No.</string>
    <string name="add_another_trip">Add another trip</string>
    <string name="trip_date">Trip Date</string>
    <string name="trip_date_hint">MM/DD/YYYY</string>
    <string name="ott_contact_info_hint2">Enter your information.</string>
    <string name="ott_contact_info_hint1">Pay tolls up to 5 days before or 5 days after your trip.</string>
    <string name="cvv_hint">3 or 4 digits</string>
    <string name="remember_log_in">Remember my login</string>
    <string name="request_items">Request Items</string>
    <string name="toll_roads_center">The Toll Roads Irvine Service Center</string>
    <string name="toll_roads_address">125 Pacifica, Irvine, CA 92618 U.S.A.</string>
    <string name="choose_option">Choose one of the following options:</string>
    <string name="calculate_for_me">Calculate My Tolls For Me</string>
    <string name="calculate_for_me_hint">Select date range(within the last 7 days).\n \nWe\'ll calculate your tolls and provide a total.\n<font color="#ffff0000">If vehicle has an existing toll balance, it will be added to your total.</font>\n\nA receipt with detailed trip info will be emailed to you after you pay.\n<font color="#ffff0000">Due to privacy laws, we cannot provide detailed trip information before you pay.</font>\n\nCheck back for tolls incurred in the last 48 hours.\n<font color="#ffff0000">Due to processing times, it may take up to 48 hours for tolls to be processed and linked to your license plate number. If you drove The Toll Roads within the last 48 hours, you will need to check back for outstanding tolls.</font></string>
    <string name="calculate_myself">I\'ll Calculate My Tolls</string>
    <string name="calculate_myself_hint">Enter detailed trip information\nCompile list of tolls owed\nPay tolls\nReceive a receipt via email for all tolls paid</string>
    <string name="next">Next</string>
</resources>