<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_tca_login"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:text="@string/capital_log_in"
        android:textSize="32sp"
        android:textColor="@android:color/white"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/black_background_white_frame_bg"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/capital_user_name"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                />

            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:inputType="text"
                android:hint="@string/user_name"
                android:layout_marginLeft="20dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textCursorDrawable="@drawable/white_text_cursor_color"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/capital_password"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:hint="@string/min_5_characters"
                android:layout_marginLeft="20dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textCursorDrawable="@drawable/white_text_cursor_color"
                />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/forgot_user_name_password"
        android:textSize="15sp"
        android:textColor="@android:color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_log_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="26dp"
            android:padding="6dp"
            android:text="@string/log_in"
            android:textSize="22sp"
            android:textColor="@android:color/white"
            android:background="@drawable/black_background_white_frame_bg"
            />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="39dp"
            android:layout_marginRight="26dp"
            android:padding="6dp"
            android:text="@string/cancel"
            android:textSize="22sp"
            android:textColor="@android:color/white"
            android:background="@drawable/black_background_white_frame_bg"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/remember_log_in"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            />

        <Switch
            android:id="@+id/sw_remember_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

</LinearLayout>
