<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        >
        <ImageView
            android:id="@+id/iv_go_back"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="16dp"
            android:src="@drawable/ic_tca_back"
            />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/transponders"
            android:textSize="@dimen/title_text_size"
            android:textColor="@android:color/black"/>
    </RelativeLayout>

    <ListView
        android:id="@+id/lv_menu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp"
        android:background="@android:color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_request_transponders"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/request_items"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/tv_request_return"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/request_return"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/tv_request_exchange"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/request_exchange"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/tv_report_lost_or_stolen"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/report_lost_or_stolen"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:background="@color/colorPrimary"/>
    </LinearLayout>

</LinearLayout>