<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        >
        <ImageView
            android:id="@+id/iv_go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:src="@drawable/ic_tca_back"
            />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/one_time_toll"
            android:textSize="@dimen/title_text_size"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/tv_go_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="16dp"
            android:layout_centerVertical="true"
            android:text="@string/next"
            android:textSize="@dimen/title_text_size"
            android:textColor="@android:color/black"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="always"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="16dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/choose_option"
                android:textColor="@color/colorBgGray"
                android:textSize="16dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="46dp"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/rb_calculate_for_me"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:checked="false"/>
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/calculate_for_me"
                    android:textSize="21dp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_calculate_for_me_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:text="@string/calculate_for_me_hint"
                android:textSize="15dp"
                android:visibility="gone"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="46dp"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/rb_calculate_myself"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:checked="false"/>
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/calculate_myself"
                    android:textSize="21dp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_calculate_myself_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:text="@string/calculate_myself_hint"

                android:textSize="15dp"
                android:visibility="gone"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
