<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        >
        <ImageView
            android:id="@+id/iv_go_back"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="16dp"
            android:src="@drawable/ic_tca_back"
            />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/make_a_payment"
            android:textSize="@dimen/title_text_size"
            android:textColor="@android:color/black"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/make_payment_hint"
        android:textSize="15sp"
        android:textColor="@color/colorGray"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:background="@drawable/white_background_grey_round_frame_bg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            >

            <TextView
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="right"
                android:text="@string/pay_method"
                android:textSize="15sp"
                android:textColor="@color/colorGray"
                />

            <Spinner
                android:id="@+id/pay_method_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="116dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_centerVertical="true"
                android:background="@null"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tca_down"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBgGray"
            />
        <LinearLayout
            android:id="@+id/ll_cvv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="right"
                    android:text="@string/cvv"
                    android:textSize="15sp"
                    android:textColor="@color/colorGray"
                    />

                <EditText
                    android:id="@+id/et_cvv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="116dp"
                    android:padding="10dp"
                    android:inputType="number"
                    android:text=""
                    android:hint="@string/cvv_hint"
                    android:textColorHint="@color/colorBgGray"
                    android:maxLength="4"
                    />
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorBgGray"
                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="right"
                android:text="@string/amount"
                android:textSize="15sp"
                android:textColor="@color/colorGray"
                />
            <TextView
                android:id="@+id/tv_dollar_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="116dp"
                android:text="@string/dollar_sign"
                android:textSize="15sp"
                android:textColor="@color/colorGray"
                />
            <EditText
                android:id="@+id/et_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tv_dollar_sign"
                android:textColor="@android:color/transparent"
                android:maxLength="8"
                android:padding="10dp"
                android:inputType="number"
                android:text=""
                />
            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tv_dollar_sign"
                android:padding="10dp"

                android:text = "0.00"
                android:textColor="@android:color/black"
                android:textSize="18dp"
                />
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/toll_roads_center"
        android:textSize="15sp"
        android:textColor="@color/colorBgGray"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="40dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/toll_roads_address"
        android:textSize="15sp"
        android:textColor="@color/colorBgGray"
        />

    <TextView
        android:id="@+id/tv_pay_now"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/pay_now"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:background="@drawable/round_primary_bg"
        />
</LinearLayout>